--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "mix-tailwindcss": "^1.3.0",
+        "popper.js": "^1.16.1",
         "vite-plugin-live-reload": "^3.0.1"
     }
 }
