--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
-        "see": "npx tailwindcss -i ./input.css -o ./public/css/app.css --watch"
+        "see": "npx tailwindcss -i src/app.css -o ./public/css/app.css --watch"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
