--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/scout": "^9.6",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^2.7",
         "spatie/laravel-permission": "^5.7"
     },
